--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <header id="top" class="row">
         <div id="logo" class="col-6">SOCIOLOGISTS</div>
         <div id="social-icon" class="col-6">
-            <div class="social-icon-item"><a href="https://www.instagram.com/dogukanbasarannn/"><img src="social_icons/instagram.png" alt="Instagram Link" height="25px" width="25px"></a></div>
-            <div class="social-icon-item"><a href="https://www.linkedin.com/in/dogukanbasaran/"><img src="social_icons/linkedin.png" alt="Linkedin Link" height="25px" width="25px"></a></div>
+            <div class="social-icon-item"><a href="https://www.instagram.com/dogukanbasarannn/"><img src="instagram.png" alt="Instagram Link" height="25px" width="25px"></a></div>
+            <div class="social-icon-item"><a href="https://www.linkedin.com/in/dogukanbasaran/"><img src="linkedin.png" alt="Linkedin Link" height="25px" width="25px"></a></div>
         </div>
     </header>
     <div id="mid" class="row">
         <div id="container" class="col-12">
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/AugusteComte-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Auguste Comte</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/EmileDurkheim-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Emile Durkheim</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/Goffman-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Erving Goffman</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/Gramsci-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Antonio Gramsci</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/KarlMarx-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Karl Marx</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/Martineu-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Harriet Martineau</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/MaxWeber-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Max Weber</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/Simmel-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Georg Simmel</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/Tocqueille-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Alexis de Tocqueville</h2></div>
-            <div class="box-common tooltip"><a href="#"><img src="sociologists_photo/Transparan/WebDuBois-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">W. E. B. Du Bois</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="AugusteComte-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Auguste Comte</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="EmileDurkheim-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Emile Durkheim</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="Goffman-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Erving Goffman</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="Gramsci-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Antonio Gramsci</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="KarlMarx-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Karl Marx</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="Martineu-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Harriet Martineau</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="MaxWeber-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Max Weber</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="Simmel-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Georg Simmel</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="Tocqueille-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">Alexis de Tocqueville</h2></div>
+            <div class="box-common tooltip"><a href="#"><img src="WebDuBois-removebg-preview.png" alt="" height="200px" width="180px"></a><h2 class="tooltiptext">W. E. B. Du Bois</h2></div>
 
 
         </div>
